fixe responsiveness on small screen

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 body {
     margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
     /*
     Challenge:
     Find a web safe font you like, and add it 
